<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textNameInput"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity4">

    <EditText
        android:id="@+id/editText_msj"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ınput2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_no"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNameSMS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/textView_tel"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:text="@string/textNameTel"
        app:layout_constraintBottom_toBottomOf="@+id/editText_no"
        app:layout_constraintEnd_toStartOf="@+id/editText_no"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_no"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/textView_Msj"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/textNameMsj"
        app:layout_constraintBottom_toBottomOf="@+id/editText_msj"
        app:layout_constraintEnd_toStartOf="@+id/editText_msj"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_msj"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ınput1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/bttn_gndr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bttn_gndr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_msj"
        app:layout_constraintVertical_bias="0.158" />
</androidx.constraintlayout.widget.ConstraintLayout>